# dockerfiles

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  test_pipfile_all.py  test_pipfile_lock.py  tmpsslfile
docker/AIDockerImage/: Dockerfile  pyproject.toml  requirements.txt  verify.py
docker/ansible-runner/: Dockerfile  Pipfile  pyproject.toml  verify.py
docker/auth-utils/: Dockerfile  pyproject.toml  verify.py
docker/demisto-sdk/: Dockerfile  Pipfile  README.md  bootstrap  build.conf  panw-cert.pem  pyproject.toml  verify.py
docker/devo/: Dockerfile  Pipfile  pyproject.toml  requirements.txt  verify.py
docker/gitlab-content-ci/: Dockerfile  Pipfile  apoc.conf  build.conf  neo4j.conf  pyproject.toml  requirements.txt  verify.py
docker/gitlab-docker-ci/: Dockerfile  pyproject.toml  verify.py
docker/kubernetespy/: Dockerfile  Pipfile  dynamic-version.sh  dynamic_version.sh  pyproject.toml  verfiy.py  verify.py
docker/ml/: .gitignore  Dockerfile  Dockerfile.ironbank  Pipfile  build.conf  entrypoint.sh  oob_evaluation.txt  pyproject.toml  verify.py
docker/mlclustering/: Dockerfile  Pipfile  build.conf  environment.txt  environment.yml  miniconda.sh  pyproject.toml  verify.py
docker/mlurlphishing/: Dockerfile  Pipfile  pyproject.toml  verify.py
docker/netutils/: Dockerfile  Pipfile  pyproject.toml  verify.py
docker/openai/: Dockerfile  Pipfile  pyproject.toml  verify.py
docker/parse-emails/: Dockerfile  Pipfile  dynamic_version.sh  pyproject.toml  verify.py
docker/py3-master/: Dockerfile  pyproject.toml  verify.py  zeep-add-to-cache.py
docker/py3-native/: CHANGELOG.md  Dockerfile  README.md  build.conf  pyproject.toml  verify.py
docker/py3-native/chromium/: download_chromedriver.sh  start_chrome_headless.sh
docker/py3-native/libreoffice/: get_latest_libreoffice_version.py
docker/py3-native/repos/: fedora-epel.repo  google-chrome.repo  rocky.repo  rocky8.repo
docker/py3-native/verifiers/: auth_utils_verify.py  boto3py3_verify.py  crypto_verify.py  docx_verify.py  google_api_py3_verify.py  ippysocks_py3_verify.py  joe_security_verify.py  netutils_verify.py  oauthlib_py3_verify.py  office_utils_verify.py  pan_os_python_verify.py  pandas_verify.py  parse_emails_verify.py  py3_tools_verify.py  py3ews_verify.py  pyjwt3_verify.py  python3_verify.py  readpdf_verify.py  sklearn_verify.py  slack_verify.py  slackv3_verify.py  taxii2_verify.py  tesseract_verify.py  unzip_verify.py  verify_chromium.py
docker/py3-native/verifiers_sym_links/: chromium_verify.py
docker/py3-tools/: Dockerfile  Pipfile  pyproject.toml  verify.py
docker/py3-tools-deb/: Dockerfile  Pipfile  pyproject.toml  verify.py
docker/py3-tools-ubi/: Dockerfile  build.conf  pyproject.toml  verify.py
docker/pymisp2/: Dockerfile  Pipfile  dynamic_version.sh  pyproject.toml  verify.py
docker/script-sentinel/: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  verify.py  xsiam_wrapper.py
docker/script-sentinel/config/: generator_config.yaml  mitre_attack_mapping.yaml  patterns_config.yaml
docker/script-sentinel/ml_models/: .gitignore  README.md  generate_prediction.py  hornet_genvector  libssl1.1_1.1.1f-1ubuntu2_amd64.deb  requirements.txt  scanner.py
docker/script-sentinel/ml_models/js/: Readme.txt  model.txt
docker/script-sentinel/ml_models/powershell/: Readme.txt  genpsvector  psscanner
docker/script-sentinel/ml_models/vbs/: Readme.txt  model.txt
docker/script-sentinel/rules/custom/bash/: rule_001_Malicious_MQTT_Shell_Bot_Communication.yar  rule_001_Malicious_XMRig_Cryptominer_Systemd_Persistence.yar  rule_002_Malicious_Multi_Architecture_Cross_Compiler_Setup.yar  rule_002_Malicious_Telegram_Bot_C2_With_Password_Decryption.yar  rule_003_Malicious_Download_Execute_Chain_Multi_Protocol.yar  rule_003_Malicious_Multi_Architecture_Botnet_Dropper.yar  rule_004_Malicious_Bash_Multi_Directory_Wget_Execute_Chain.yar  rule_004_Malicious_Bash_Ransomware_Decryption_Script.yar  rule_005_Malicious_Bash_Persistent_C2_Shell_Loop.yar  rule_005_Suspicious_Bash_Static_Compilation_With_Threading.yar  rule_006_Suspicious_Bash_Encrypted_Remote_Shell_Handler.yar  rule_009_Malicious_Shell_Writable_Directory_Hunter_Payload_Drop.yar  rule_009_Suspicious_Remote_Command_Execution_Handler.yar  rule_010_Malicious_Bash_Wget_Pipe_Execute_LOLBin.yar  rule_010_Malicious_Shell_DDoS_Tool_AutoDoS_Pattern.yar  rule_011_Suspicious_Bash_Remote_Download_Execute_Chain.yar  (+25 more)
docker/script-sentinel/rules/public/: ATTRIBUTION.md  test_rule.yar
docker/script-sentinel/rules/templates/: obfuscation_example.yaml  pattern_example.yaml  pattern_style_guide.md  yara_example_bad.yar  yara_example_good.yar  yara_style_guide.md
docker/script-sentinel/sentinel/: __init__.py  adk_agent.py  aggregator.py  analyzer.py  extractor.py  heuristics.py  ioc_extractor.py  main.py  mitre.py  models.py  obfuscation.py  parser.py  sanitizer.py  verdict.py  yara_engine.py
docker/script-sentinel/sentinel/data/: mitre_attack.json
docker/script-sentinel/sentinel/patterns/: __init__.py  loader.py  models.py  registry.py  schema.yaml
docker/script-sentinel/sentinel/reporters/: __init__.py  console_reporter.py  explain_reporter.py  json_reporter.py  markdown_reporter.py
docker/script-sentinel/sentinel/scorers/: __init__.py  aggregator.py  base.py  content.py  context_aware.py  cooccurrence.py  killchain.py  ml.py  severity.py  yara.py
docker/script-sentinel/sentinel/utils/: __init__.py  config_loader.py  explainer.py
docker/stringsifter/: Dockerfile  Pipfile  build.conf  dynamic_version.sh  pyproject.toml  verify.py
docker/test-llama-cpp/: .gitignore  Dockerfile  Meta-Llama-3.1-8B-Instruct-Q4_K_M.gguf  pyproject.toml  run_llm.py  tinyllama-1.1b-chat-v1.0.Q4_K_M.gguf  verify.py
docker/threatconnect-py3-sdk/: Dockerfile  Pipfile  pyproject.toml
docker/vendors-sdk/: Dockerfile  pyproject.toml  verify.py
docker/xsoar-tools/: Dockerfile  Dockerfile.ironbank  Pipfile  pyproject.toml  verify.py
(+1507 files in other folders)
