[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dockerfiles"
version = "0.0.1"
description = "Dockerfiles for Cortex XSOAR content"
authors = ["Cortex XSOAR"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
"ruamel.yaml" = "*"
requests = "*"
dockerfile_parse = "*"
pyyaml = "*"
regex = "*"
python-dateutil = "*"
gitpython = "^3.1.43" # import git
python-gitlab = "^3.0.0" # import gitlab
toml = "*"
demisto-sdk = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.pytest.ini_options]
addopts = """
    --disable-warnings
    --color=yes
    -v
    --ignore='tests/'
    --ignore='artifacts/'
    --junitxml=report.xml
    """
python_files = "test_*.py *_test.py"
