[tool.poetry]
name = "dockerfiles"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pydantic = ">=2.7.1"
requests-oauthlib = "*"
pyjwt = {extras = ["crypto"],version = ">=2.12.0"}
oauthlib = {extras = ["signedtoken"], version = "*"}
edgegrid-python = "*"
pem = "*"
azure-kusto-data = "*"
pywinrm = {extras = ["kerberos"],version = "*"}
aiohttp = ">=3.13.3"
urllib3 = ">=2.6.3"
azure-core = ">=1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
