[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Judah Schwartz <juschwartz@paloaltonetworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
devo-sdk = "^6.0.6"
pandas = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
