[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Judah Schwartz <juschwartz@paloaltonetworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
devo-sdk = "^7.0.0"
pandas = "*"
urllib3 = ">=2.7.0"
cryptography = ">=48.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
