[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Demisto <demisto@demisto.com>"]
readme = "README.md"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu/"
priority = "explicit"


[tool.poetry.dependencies]
python = "~3.12"
fasttext = "*"
numpy = "*"
scikit-learn = "*"
pandas = "*"
nltk = ">=3.9.3"
lime = "*"
tabulate = "*"
pycryptodome = "*"
spacy = "*"
fsspec = "*"
dill = "*"
catboost = "*"
langdetect = "*"
onnx = ">=1.21.0"
onnxruntime = "*"
transformers = "*"
setuptools = ">=82.0.1"
torch = {version = "*", extras = ["cpu"], source="pytorch"}
pillow = ">=12.2.0"
urllib3 = ">=2.6.3"
protobuf = ">=7.35.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
