[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Demisto <demisto@demisto.com>"]
readme = "README.md"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu/"
priority = "explicit"


[tool.poetry.dependencies]
python = "~3.12"
fasttext = "*"
numpy = "*"
scikit-learn = "*"
pandas = "*"
nltk = ">=3.9.3"
lime = "*"
tabulate = "*"
pycryptodome = "*"
spacy = "*"
fsspec = "*"
dill = "*"
catboost = "*"
langdetect = "*"
onnx = ">=1.22.0"
onnxruntime = "*"
transformers = ">=4.53.0"
setuptools = ">=82.0.1"
torch = {version = ">=2.9.1", extras = ["cpu"], source="pytorch"}
pillow = ">=12.3.0"
urllib3 = ">=2.6.3"
protobuf = ">=7.35.1"
filelock = ">=3.20.1"
requests = ">=2.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
