[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Judah Schwartz <juschwartz@paloaltonetworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
tldextract = "==3.1.0" 
more-itertools = "*"
defusedxml = "*"
opencv-python = "==4.5.5.64"  # using previous version until fixed https://github.com/opencv/opencv-python/issues/676
scikit-learn = "==1.0.2"   # cannot upgrade, the newer versions are BC with the training model. 
scipy = "==1.8.0"   # All dependencies listed below are frozen because we couldn't upgrade all of them. It's possible that some could still be updated. https://jira-dc.paloaltonetworks.com/browse/CIAC-9755
NumPy = "==1.21.6"
beautifulsoup4 = "==4.11.1"
catboost = "==1.0.6"
certifi = "==2024.07.04"
charset-normalizer = "==2.0.1"
cycler = "==0.11.0"
dateparser = "==1.0.0"
dill = "==0.3.5.1"
filelock = "==3.0.12"
fonttools = "==4.43.0"
funcy = "==1.16"
graphviz = "==0.20"
idna = "==3.2"
joblib = "==1.2.0"
kiwisolver = "==1.4.2"
matplotlib = "==3.5.2"
olefile = "==0.46"
packaging = "==21.3"
pandas = "==1.3.5"
Pillow = "==10.2.0"
plotly = "==5.8.0"
pyparsing = "==3.0.9"
PySocks = "==1.7.1"
python-dateutil = "==2.8.2"
pytz = "==2022.1"
PyYAML = "*"
regex = "==2021.7.6"
requests = "==2.26.0"
requests-file = "==1.5.1"
six = "==1.16.0"
soupsieve = "==2.3.2.post1"
tenacity = "==8.0.1"
threadpoolctl = "==3.1.0"
tzlocal = "==2.1"
urllib3 = "==1.26.19"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
