[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Judah Schwartz <juschwartz@paloaltonetworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
tldextract = "*"
more-itertools = "*"
defusedxml = "*"
opencv-python = "*"  # using previous version until fixed https://github.com/opencv/opencv-python/issues/676
scikit-learn = "*"   # cannot upgrade, the newer versions are BC with the training model. 
scipy = "*"   # All dependencies listed below are frozen because we couldn't upgrade all of them. It's possible that some could still be updated. https://jira-dc.paloaltonetworks.com/browse/CIAC-9755
NumPy = "*"
beautifulsoup4 = "*"
catboost = "*"
certifi = "*"
charset-normalizer = "*"
cycler = "*"
dateparser = "*"
dill = "*"
filelock = "*"
fonttools = "*"
funcy = "*"
graphviz = "*"
idna = "*"
joblib = "*"
kiwisolver = "*"
matplotlib = "*"
olefile = "*"
packaging = "*"
pandas = "*"
Pillow = "*"
plotly = "*"
pyparsing = "*"
PySocks = "*"
python-dateutil = "*"
pytz = "*"
PyYAML = "*"
regex = "*"
requests = "*"
requests-file = "*"
six = "*"
soupsieve = "*"
tenacity = "*"
threadpoolctl = "*"
tzlocal = "*"
urllib3 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
