[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Judah Schwartz <juschwartz@paloaltonetworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
tldextract = "*"
more-itertools = "*"
defusedxml = "*"
opencv-python = "*"
scikit-learn = "*"
scipy = "*"
NumPy = "==1.26.4"  # waiting for: https://github.com/catboost/catboost/issues/2671
beautifulsoup4 = "*"
catboost = "*"
certifi = "*"
charset-normalizer = "*"
cycler = "*"
dateparser = "*"
dill = "*"
filelock = "*"
fonttools = "*"
funcy = "*"
graphviz = "*"
idna = "*"
joblib = "*"
kiwisolver = "*"
matplotlib = "*"
olefile = "*"
packaging = "*"
pandas = "*"
Pillow = "*"
plotly = "*"
pyparsing = "*"
PySocks = "*"
python-dateutil = "*"
pytz = "*"
PyYAML = "*"
regex = "*"
requests = "*"
requests-file = "*"
six = "*"
soupsieve = "*"
tenacity = "*"
threadpoolctl = "*"
tzlocal = "*"
urllib3 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
