[tool.poetry]
name = "netutils"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
requests = {extras = ["socks"],version = "*"}
netaddr = "*"
python-libnmap = "*"
websockets = "*"
dnspython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
