[tool.poetry]
name = "netutils"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
requests = {extras = ["socks"],version = "*"}
netaddr = "*"
python-libnmap = "*"
websockets = ">=12.0.0"
dnspython = "*"
aiohttp = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
