[tool.poetry]
name = "netutils"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
requests = {extras = ["socks"],version = "*"}
netaddr = "*"
python-libnmap = "*"
websockets = ">=12.0.0"
dnspython = "*"
aiohttp = "*"
aiolimiter = "*"
psutil = "7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"