[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
openai = "*"
langchain = "*"
tiktoken = "*"
pdf2image = "*"
pypdf = "*"
faiss-cpu = "*"
unstructured = {extras = ["local-inference"], version = "*"}
layoutparser = {extras = ["layoutmodels", "tesseract"], version = "*"}