[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
parse-emails = { git = "https://github.com/demisto/parse-emails", rev = "0f382ea2fcd0e91a63d35b18787340379b7bcd8b" }
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
