[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
parse-emails = {git = "https://github.com/demisto/parse-emails.git", branch = "Fix-double-base64-decoding-of-embedded-email-attachments"}
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
