[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
parse-emails = "*"
cryptography = ">=48.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
