[tool.poetry]
name = "py3-master"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opensearch_dsl = "*"
aiohttp = "*"
rsa = "*"
xmltodict = "*"
markdown = "*"
python-magic = "*"
pan-os-python = "*"
pdf2image = "*"
bs4 = "*"
lxml = "*"
chardet = "*"
six = "*"
pygments = "*"
pyshark = "*"
numpy = "*"
scikit-learn = "*"
nltk = "*"
pandas = "*"
urllib3 = "*"
ipaddress = "*"
python-docx = "*"
netaddr = "*"
pycryptodome = "*"
enum34 = "*"
pypdf2 = "*"
pikepdf = "*"
boto3 = "*"
msal = "*"
cryptography = "*"
tzlocal = "*"
defusedxml = "*"
isodate = "*"
future = "*"
idna = "*"
pycparser = "*"
cffi = "*"
dxlmarclient = "*"
dxltieclient = "*"
dxlclient = "*"
asn1crypto = "*"
certifi = "*"
cached-property = "*"
editdistance = "*"
phrases-case = "*"
pyvirtualdisplay = "*"
parse-emails = "*"
slack-sdk = {extras = ["optional"], version = "*"}
google-api-python-client = "*"
exchangelib = "*"
requests-oauthlib = "*"
oauthlib = "*"
requests-ntlm = "*"
oauth2client = "*"
dill = "*"
eli5 = "*"
packaging = "*"
tabulate = "*"
transformers = "*"
catboost = "*"
fsspec = "*"
onnx = "*"
lime = "*"
spacy = "*"
onnxruntime = "*"
rtfde = "*"
webdriver-manager = "*"
selenium = "*"
cymruwhois = "*"
simplejson = "*"
networkx = "*"
slackclient = "*"
regex = "*"
dpkt = "*"
aiodns = "*"
pysocks = "^1.7.0"  # must be 1.7.0 or above, cause 1.6.8 doesn't work on python 3.10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
