[tool.poetry]
name = "py3-native"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opensearch_dsl = "*"
aiohttp = "*"
python-magic = "*"
pan-os-python = "*"
pdf2image = "*"
bs4 = "*"
lxml = "*"
chardet = "*"
six = "*"
pygments = "*"
numpy = "*"
scikit-learn = "*"
nltk = ">=3.6.6"
pandas = "*"
urllib3 = ">=1.26.5"
python-docx = "*"
enum34 = "*"
pypdf2 = "*"
pikepdf = "*"
boto3 = "*"
msal = "*"
cryptography = ">=39.0.1"
tzlocal = "*"
defusedxml = "*"
isodate = "*"
future = ">=0.18.3"
idna = "*"
pycparser = "*"
cffi = "*"
asn1crypto = "*"
certifi = "*"
cached-property = "*"
phrases-case = "*"
pyvirtualdisplay = "*"
parse-emails = "*"
slack-sdk = {extras = ["optional"], version = "*"}
pyjwt = {extras = ["crypto"],version = "*"}
google-api-python-client = "*"
exchangelib = "*"
requests-oauthlib = "*"
oauthlib = "*"
requests-ntlm = "*"
oauth2client = "*"
dill = "*"
eli5 = "*"
packaging = "*"
rtfde = "*"
webdriver-manager = "*"
selenium = "*"
cymruwhois = "*"
simplejson = "*"
networkx = "*"
slackclient = "*"
regex = "*"
dpkt = "*"
aiodns = "*"
pysocks = ">=1.7.0"  # must be 1.7.0 or above, cause 1.6.8 doesn't work on python 3.10
jbxapi = "*"
python-whois = "*"
ipwhois = "*"
edgegrid-python = "*"
tldextract = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
