[tool.poetry]
name = "py3-native"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
opensearch_dsl = "*"
aiohttp = "*"
python-magic = "*"
pan-os-python = "*"
pdf2image = "*"
bs4 = "*"
lxml = "*"
chardet = "*"
six = "*"
pygments = "*"
numpy = "*"
scikit-learn = "*"
nltk = ">=3.6.6"
pandas = "*"
urllib3 = "^2.2.3"
python-docx = "*"
enum34 = "*"
pypdf2 = "*"
pikepdf = "*"
boto3 = "*"
msal = "*"
cryptography = ">=39.0.1"
tzlocal = "*"
defusedxml = "*"
isodate = "*"
future = ">=1.0.0"
idna = "*"
pycparser = "*"
cffi = "*"
asn1crypto = "*"
certifi = "*"
cached-property = "*"
phrases-case = "*"
pyvirtualdisplay = "*"
parse-emails = "*"
slack-sdk = {extras = ["optional"], version = "*"}
pyjwt = {extras = ["crypto"],version = "*"}
google-api-python-client = "*"
exchangelib = ">=5.4.1"
requests-oauthlib = "*"
oauthlib = {extras = ["signedtoken"], version = "*"}
requests-ntlm = "==1.1.0"
oauth2client = "*"
dill = "*"
packaging = "*"
webdriver-manager = "*"
selenium = "*"
cymruwhois = "*"
simplejson = "*"
networkx = "*"
slackclient = ">2.0"
regex = "*"
dpkt = "*"
aiodns = ">1.0"
pysocks = ">=1.7.0"  # must be 1.7.0 or above, cause 1.6.8 doesn't work on python 3.10
jbxapi = "*"
python-whois = "*"
ipwhois = "*"
edgegrid-python = "*"
tldextract = "*"
requests = {extras = ["socks"],version = "*"}
netaddr = "*"
python-libnmap = "*"
websockets = ">=12.0.0"
dnspython = ">=2.6.1"
pydantic = ">=2.7.1"
pem = "*"
azure-kusto-data = "*"
pywinrm = {extras = ["kerberos"],version = "*"}
pychrome = "*"
psutil="*"
openpyxl = ">=3.1.2"
python-pptx = "*"
ntlm-auth = ">=1.5.0"
opensearch-py = "*"
pyOpenSSL = "*"
PyCryptodome = "*"
PyPDF2 = "*"
yara-python = "^4.5.1"
plyara = "^2.1.1"
json2html = "*"
aiolimiter = "*"
deepmerge = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
