[tool.poetry]
name = "py3-tools-deb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "py3_tools_deb"}]

[tool.poetry.dependencies]
python = "^3.10"
cloudshare = "*"
intezer-sdk = "*"
emoji = "*"
exifread = "*"
"stomp.py" = "*"
geopy = "*"
dnspython = "*"
algorithmia = "*"
asana = "*"
feedparser = "*"
beautifulsoup4 = "*"
mail-parser = "*"
imap-tools = "*"
imapclient = "*"
pyjarm = "*"
pyminizip = "*"
paho-mqtt = "*"
arrow = "*"
pytz = "*"
python-dateutil = "*"
vertica-python = "*"
sendgrid = "*"
circleci = "*"
rsa-archer = "*"
tweepy = "*"
tld = "*"
validate-email = "*"
markdownify = "*"
langdetect = "*"
gql = "*"
minio = "*"
ldap3 = "*"
pymongo = "*"
cyjax-cti = "*"
pyzabbix = "*"
jmespath = "*"
tldextract = "*"
stix2 = "*"
taxii2-client = "*"
xlrd = "==1.2.0"
elasticsearch = "*"
opensearch-py = "*"
elasticsearch-dsl = "*"
opensearch_dsl = "*"
aiohttp = "*"
rsa = "*"
xmltodict = "*"
markdown = "*"
python-magic = "*"
pan-os-python = "*"
pdf2image = "*"
bs4 = "*"
lxml = "*"
chardet = "*"
six = "*"
pygments = "*"
pyshark = "*"
numpy = "*"
scikit-learn = "*"
nltk = "*"
pandas = "*"
urllib3 = "*"
ipaddress = "*"
python-docx = "*"
netaddr = "*"
pycryptodome = "*"
enum34 = "*"
pypdf2 = "*"
pikepdf = "*"
boto3 = "*"
msal = "*"
cryptography = "*"
tzlocal = "*"
defusedxml = "*"
isodate = "*"
future = "*"
idna = "*"
pycparser = "*"
cffi = "*"
dxlmarclient = "*"
dxltieclient = "*"
dxlclient = "*"
asn1crypto = "*"
certifi = "*"
cached-property = "*"
editdistance = "*"
phrases-case = "*"
pyvirtualdisplay = "*"
parse-emails = "*"
slack-sdk = {extras = ["optional"], version = "*"}
google-api-python-client = "*"
exchangelib = "*"
requests-oauthlib = "*"
oauthlib = "*"
requests-ntlm = "*"
oauth2client = "*"
dill = "*"
eli5 = "*"
packaging = "*"
tabulate = "*"
transformers = "*"
fasttext = "*"
catboost = "*"
fsspec = "*"
onnx = "==1.9.0"
lime = "*"
spacy = "*"
onnxruntime = "==1.8.0"
rtfde = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
