[tool.poetry]
name = "py3-tools-deb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
cloudshare = "*"
intezer-sdk = "*"
emoji = "*"
exifread = "*"
"stomp.py" = "*"
geopy = "*"
dnspython = "*"
algorithmia = "*"
asana = "*"
feedparser = "*"
beautifulsoup4 = "*"
mail-parser = "*"
imap-tools = "*"
imapclient = "*"
pyjarm = "*"
pyminizip = "*"
paho-mqtt = "*"
arrow = "*"
pytz = "*"
python-dateutil = "*"
vertica-python = "*"
sendgrid = "*"
circleci = "*"
rsa-archer = "*"
tweepy = "*"
tld = "*"
validate-email = "*"
requests = "*"
markdownify = "*"
langdetect = "*"
gql = "*"
minio = "*"
ldap3 = "*"
pymongo = "*"
cyjax-cti = "*"
pyzabbix = "*"
jmespath = "*"
tldextract = "*"
stix2 = "*"
taxii2-client = "*"
xlrd = "==1.2.0"
elasticsearch = "*"
opensearch-py = "*"
elasticsearch-dsl = "*"
pycryptodome = "*"
requests-toolbelt = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
