[tool.poetry]
name = "py3-tools-deb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
cloudshare = "*"
intezer-sdk = ">=1.21.3"
emoji = "*"
exifread = "*"
"stomp.py" = "*"
geopy = "*"
dnspython = "*"
algorithmia = "*"
asana = "<=3.2.1"  # BC in Higher version, community supported integration
feedparser = "*"
beautifulsoup4 = "*"
mail-parser = "*"
imap-tools = "*"
imapclient = "*"
pyjarm = "*"
paho-mqtt = "^1.6.1"  # breaking changes in v2
arrow = "*"
pytz = "*"
python-dateutil = "*"
vertica-python = "*"
sendgrid = "*"
circleci = "*"
rsa-archer = "*"
tweepy = "*"
tld = "*"
validate-email = "*"
requests = "*"
markdownify = "*"
langdetect = "*"
gql = "*"
minio = "*"
ldap3 = "*"
pymongo = "*"
pyzabbix = "*"
jmespath = "*"
tldextract = "*"
stix2 = "*"
taxii2-client = "*"
xlrd = "==2.0.2"
pycryptodome = "*"
requests-toolbelt = "*"
certifi = "*"
pyzipper = "*"
json2html = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
