[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Judah Schwartz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pymisp = { version = "*", extras = ["email"] }
urllib3 = ">=2.6.3"
cryptography = ">=48.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
