[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["TalZich <tzichlinsky@paloaltonetworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
stringsifter = "3.20230711"
scikit-learn = "1.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
